inputs alignment issue

--- a/src/app/components/availability-row/availability-slot.component.scss
+++ b/src/app/components/availability-row/availability-slot.component.scss
@@ -5,3 +5,8 @@
 .to {
   padding: 0 12px;
 }
+
+.to, button {
+  margin-top: 5px;
+  margin-bottom: 25px;
+}
