--- a/src/app/components/availability/availability.component.scss
+++ b/src/app/components/availability/availability.component.scss
@@ -44,7 +44,7 @@
 
 .time-row {
   display: flex;
-  align-items: baseline;
+  align-items: center;
 
   &.none {
     display: none;
